force-app/src/objects/OrderApi__Sales_Order_Line_R__c.object
<CustomObject>
    <description>The Sales Order Line (R) tracks the related Sales Order Line&apos;s reporting currency and currency conversion rate at the time of creation when Fonteva&apos;s multi-currency is enabled.</description>
    <fields>
        <fullName>OrderApi__Adjustments__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of adjustments for this item in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of adjustments for this item in the reporting currency.</inlineHelpText>
        <label>Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of payments for this item in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of payments for this item in the reporting currency.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount_Refunded__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of refunds for this item in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of refunds for this item in the reporting currency.</inlineHelpText>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Balance_Due__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value contains the total remaining amount due for this item in the reporting currency.</description>
        <inlineHelpText>This value contains the total remaining amount due for this item in the reporting currency.</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Conversion_Gain_Loss__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of gains and losses created as a result of currency fluctuation for this item in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of gains and losses created as a result of currency fluctuation for this item in the reporting currency.</inlineHelpText>
        <label>Conversion Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Conversion_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This value defines the conversion rate used from the conversion table at the time the record was created.</description>
        <inlineHelpText>This value defines the conversion rate used from the conversion table at the time the record was created.</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credits_Applied__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores credits applied for this item in the reporting currency.</description>
        <inlineHelpText>This value stores credits applied for this item in the reporting currency.</inlineHelpText>
        <label>Credits Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will not consider the line in inventory calculations. Adjustment lines are the only type of lines that can be added to sales orders w/o payments that have posted.</description>
        <inlineHelpText>When checked, the system will not consider the line in inventory calculations. Adjustment lines are the only type of lines that can be added to sales orders w/o payments that have posted.</inlineHelpText>
        <label>Is Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Overall_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the total charged for this item in the reporting currency.</description>
        <inlineHelpText>This value stores the total charged for this item in the reporting currency.</inlineHelpText>
        <label>Overall Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Builds a self-parenting relationship for taxes, shipping, adjustments, and other order processing functions.</description>
        <inlineHelpText>Builds a self-parenting relationship for taxes, shipping, adjustments, and other order processing functions.</inlineHelpText>
        <label>Sales Order Line (R)</label>
        <referenceTo>OrderApi__Sales_Order_Line_R__c</referenceTo>
        <relationshipLabel>Sales Order Lines (R)</relationshipLabel>
        <relationshipName>Sales_Order_Lines_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line_Reference__c</fullName>
        <description>System field that creates a one to one relationship to a sales order line.</description>
        <externalId>true</externalId>
        <inlineHelpText>System field that creates a one to one relationship to a sales order line.</inlineHelpText>
        <label>Sales Order Line Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order (R)</label>
        <referenceTo>OrderApi__Sales_Order_R__c</referenceTo>
        <relationshipLabel>Sales Order Lines (R)</relationshipLabel>
        <relationshipName>Sales_Order_Lines_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order Line (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Sales Order Line (R) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>